Add themes, strings and colors

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,10 +13,18 @@
     <color name="text_color_secondary">#edf2f7</color>
     <color name="color_accent">#A33838</color>
     <color name="hint_color">#E5E9ED</color>
-    <color name="gray_800">#2d3748</color>
-    <color name="gray_600">#718096</color>
+    <color name="edit_text_background_color">#66718096</color>
+    <color name="divider_color">#edf2f7</color>
+    <color name="default_recycler_view_item_background_color">#2D4459</color>
+
     <color name="gray_100">#f7fafc</color>
     <color name="gray_200">#edf2f7</color>
+    <color name="gray_300">#e2e8f0</color>
+    <color name="gray_400">#cbd5e0</color>
+    <color name="gray_500">#a0aec0</color>
+    <color name="gray_600">#718096</color>
+    <color name="gray_800">#2d3748</color>
+    <color name="gray_900">#1a202c</color>
+
     <color name="red_700">#A33838</color>
-    <color name="edit_text_background_color">#66718096</color>
 </resources>
