--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,13 +18,12 @@
             tools:ignore="UselessParent">
 
             <LinearLayout
+                android:id="@+id/main_container"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:orientation="vertical"
-                android:paddingHorizontal="16dp"
-                android:paddingVertical="12dp"
                 tools:ignore="UselessParent">
 
                 <!-- Main content -->
