Code adjustments -- UserFormActivity

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -91,7 +91,7 @@
                     android:textColor="@color/gray_200"
                     android:background="@drawable/edit_text_background"
                     android:padding="12dp"
-                    android:hint="@string/password"
+                    android:hint="@string/password_hint"
                     android:inputType="textPassword"/>
 
             </com.google.android.material.textfield.TextInputLayout>
