--- a/app/src/main/res/layout/activity_user_form.xml
+++ b/app/src/main/res/layout/activity_user_form.xml
@@ -11,134 +11,135 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <include layout="@layout/default_toolbar"
-            android:id="@+id/user_form_toolbar"/>
+        <include
+            android:id="@+id/user_form_toolbar"
+            layout="@layout/default_toolbar" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:orientation="vertical"
-            android:paddingVertical="12dp"
-            android:paddingHorizontal="16dp"
             android:gravity="center"
+            android:orientation="vertical"
+            android:paddingHorizontal="16dp"
+            android:paddingVertical="12dp"
             tools:ignore="UselessParent">
 
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
-                android:src="@drawable/user_form_illustration"
-                android:contentDescription="@string/app_logo" />
+                android:contentDescription="@string/app_logo"
+                android:src="@drawable/user_form_illustration" />
 
             <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
-                app:startIconDrawable="@drawable/ic_baseline_account_circle_24"
-                app:startIconTint="@color/gray_200"
                 android:elevation="4dp"
                 android:textColorHint="@color/hint_color"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+                app:startIconDrawable="@drawable/ic_baseline_account_circle_24"
+                app:startIconTint="@color/gray_200">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/name_input"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/name_hint"
-                    android:textColor="@color/gray_200"
                     android:background="@drawable/edit_text_background"
+                    android:hint="@string/name_hint"
+                    android:inputType="textCapWords"
                     android:padding="12dp"
                     android:singleLine="true"
-                    android:inputType="textCapWords"/>
+                    android:textColor="@color/gray_200" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
-                app:startIconDrawable="@drawable/ic_baseline_alternate_email_24"
-                app:startIconTint="@color/gray_200"
                 android:elevation="4dp"
                 android:textColorHint="@color/hint_color"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+                app:startIconDrawable="@drawable/ic_baseline_alternate_email_24"
+                app:startIconTint="@color/gray_200">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/email_input"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/email"
-                    android:textColor="@color/gray_200"
                     android:background="@drawable/edit_text_background"
+                    android:hint="@string/email_hint"
+                    android:inputType="textEmailAddress"
                     android:padding="12dp"
                     android:singleLine="true"
-                    android:inputType="textEmailAddress"/>
+                    android:textColor="@color/gray_200" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
-                app:startIconDrawable="@drawable/ic_baseline_account_circle_24"
-                app:startIconTint="@color/gray_200"
                 android:elevation="4dp"
                 android:textColorHint="@color/hint_color"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+                app:startIconDrawable="@drawable/ic_baseline_account_circle_24"
+                app:startIconTint="@color/gray_200">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/login_input"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/username"
-                    android:textColor="@color/gray_200"
                     android:background="@drawable/edit_text_background"
+                    android:hint="@string/username_hint"
+                    android:inputType="text"
                     android:padding="12dp"
                     android:singleLine="true"
-                    android:inputType="text"/>
+                    android:textColor="@color/gray_200" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
+                android:elevation="4dp"
                 android:textColorHint="@color/hint_color"
                 app:startIconDrawable="@drawable/ic_baseline_lock_open_24"
-                app:startIconTint="@color/gray_200"
-                android:elevation="4dp"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+                app:startIconTint="@color/gray_200">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/password_input"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:singleLine="true"
-                    android:textColor="@color/gray_200"
                     android:background="@drawable/edit_text_background"
+                    android:hint="@string/password_hint"
+                    android:inputType="textPassword"
                     android:padding="12dp"
-                    android:hint="@string/password"
-                    android:inputType="textPassword"/>
+                    android:singleLine="true"
+                    android:textColor="@color/gray_200" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
+                android:elevation="4dp"
                 android:textColorHint="@color/hint_color"
                 app:startIconDrawable="@drawable/ic_baseline_lock_open_24"
-                app:startIconTint="@color/gray_200"
-                android:elevation="4dp"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+                app:startIconTint="@color/gray_200">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/password_confirmation_input"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:singleLine="true"
-                    android:textColor="@color/gray_200"
                     android:background="@drawable/edit_text_background"
+                    android:hint="@string/password_confirmation_hint"
+                    android:inputType="textPassword"
                     android:padding="12dp"
-                    android:hint="@string/password_confirmation"
-                    android:inputType="textPassword"/>
+                    android:singleLine="true"
+                    android:textColor="@color/gray_200" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -149,10 +150,10 @@
                 android:layout_marginTop="16dp"
                 android:background="@drawable/button_background"
                 android:text="@string/register_user"
-                android:textColor="@color/gray_200"
-                android:typeface="sans"
-                android:textStyle="bold"
                 android:textAllCaps="false"
+                android:textColor="@color/gray_200"
+                android:textStyle="bold"
+                android:typeface="sans"
                 app:backgroundTint="@null" />
 
             <ProgressBar
@@ -160,7 +161,8 @@
                 style="?android:attr/progressBarStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp" />
+                android:layout_marginTop="16dp"
+                android:visibility="gone" />
 
         </LinearLayout>
 
