--- a/app/src/main/res/layout/fragment_lock_list.xml
+++ b/app/src/main/res/layout/fragment_lock_list.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/lock_recycler_view"
+    <ListView
+        android:id="@+id/fragment_lock_list_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:listitem="@layout/lock_list_view_item" />
+        android:divider="@color/divider_color"
+        android:dividerHeight="1dp" />
 
     <ImageView
         android:id="@+id/lock_list_illustration"
@@ -46,10 +46,10 @@
         android:id="@+id/lock_list_floating_action_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
+        android:layout_margin="16dp"
         android:contentDescription="@string/lock_list_floating_action_button_description"
-        android:src="@drawable/ic_baseline_add_24"/>
+        android:src="@drawable/ic_baseline_add_24" />
 
 </RelativeLayout>
