--- a/app/src/main/res/layout/lock_list_view_item.xml
+++ b/app/src/main/res/layout/lock_list_view_item.xml
@@ -1,36 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/lock_list_view_item_relative_layout"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/default_recycler_view_item_background_color"
-    android:paddingHorizontal="8dp"
-    android:paddingVertical="8dp">
+    android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/list_view_lock_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:text="Fechadura Principal"
-        android:textSize="17dp" />
+    <RelativeLayout
+        android:id="@+id/lock_list_view_item_relative_layout"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:layout_weight="100"
+        android:background="@color/default_list_view_item_background_color"
+        android:padding="12dp">
 
-    <TextView
-        android:id="@+id/list_view_lock_created_by_user"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/list_view_lock_name"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="8dp"
-        android:text="Wilian Hendler Borges"
-        android:textColor="@color/gray_500"
-        android:textSize="15sp"
-        android:textStyle="bold" />
+        <LinearLayout
+            android:id="@+id/list_view_lock_name_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/list_view_lock_icon"
-        android:layout_width="35dp"
-        android:layout_height="35dp"
-        android:layout_alignParentEnd="true"
-        android:layout_centerVertical="true" />
-</RelativeLayout>
+            <ImageView
+                android:id="@+id/list_view_lock_icon"
+                android:layout_width="20dp"
+                android:layout_height="20dp" />
+
+            <TextView
+                android:id="@+id/list_view_lock_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:text="Fechadura Principal"
+                android:textColor="@color/gray_200"
+                android:textSize="17sp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/list_view_lock_name_layout"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="8dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/ic_baseline_person_24" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:text="@string/lock_list_lock_owner_description"
+                android:textColor="@color/blue_500"
+                android:textSize="15sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/list_view_lock_created_by_user"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:text="Wilian Hendler Borges"
+                android:textColor="@color/gray_200"
+                android:textSize="15sp"
+                android:textStyle="bold" />
+
+        </LinearLayout>
+
+
+    </RelativeLayout>
+
+    <LinearLayout
+        android:id="@+id/lock_list_delete_button"
+        android:layout_width="80dp"
+        android:layout_height="match_parent"
+        android:layout_weight="0"
+        android:background="#A83939"
+        android:gravity="center">
+
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/ic_baseline_delete_24" />
+
+    </LinearLayout>
+
+</LinearLayout>
+
+
