--- a/app/src/main/res/layout/lock_list_view_item.xml
+++ b/app/src/main/res/layout/lock_list_view_item.xml
@@ -79,7 +79,7 @@
         android:layout_width="80dp"
         android:layout_height="match_parent"
         android:layout_weight="0"
-        android:background="#A83939"
+        android:background="@color/red_800"
         android:gravity="center">
 
         <ImageView
