--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,6 +27,7 @@
     <color name="gray_900">#1a202c</color>
 
     <color name="red_700">#A33838</color>
+    <color name="red_800">#FF9C3838</color>
 
-    <color name="blue_500">#03A9F4</color>
+    <color name="blue_500">#2196F3</color>
 </resources>
