Add colors and strings

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="default_toolbar_color">#2d3748</color>
+    <color name="default_dialog_background_color">#2d3748</color>
     <color name="text_color">#edf2f7</color>
     <color name="text_color_primary">#edf2f7</color>
     <color name="text_color_secondary">#edf2f7</color>
@@ -26,7 +27,7 @@
     <color name="gray_800">#2d3748</color>
     <color name="gray_900">#1a202c</color>
 
-    <color name="green_500">#89c43f</color>
+    <color name="green_500">#83B83F</color>
 
     <color name="red_500">#f56565</color>
     <color name="red_700">#A33838</color>
