--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -24,75 +24,75 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
-                android:src="@drawable/ws_lock_logo"
-                android:contentDescription="@string/app_logo" />
+                android:contentDescription="@string/app_logo"
+                android:src="@drawable/ws_lock_logo" />
 
             <com.google.android.material.textview.MaterialTextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
+                android:fontFamily="sans-serif-medium"
+                android:paddingVertical="5dp"
                 android:text="@string/app_name"
                 android:textAlignment="center"
                 android:textColor="@color/gray_200"
-                android:fontFamily="sans-serif-medium"
-                android:textStyle="bold"
                 android:textSize="20sp"
-                android:paddingVertical="5dp" />
+                android:textStyle="bold" />
 
             <com.google.android.material.textview.MaterialTextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/app_description"
                 android:layout_marginTop="-6dp"
+                android:fontFamily="sans-serif"
+                android:paddingVertical="5dp"
+                android:text="@string/app_description"
                 android:textAlignment="center"
                 android:textColor="@color/gray_200"
-                android:fontFamily="sans-serif"
-                android:textStyle="bold"
                 android:textSize="14sp"
-                android:paddingVertical="5dp" />
+                android:textStyle="bold" />
 
             <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
-                app:startIconDrawable="@drawable/ic_baseline_account_circle_24"
-                app:startIconTint="@color/white"
                 android:elevation="4dp"
                 android:textColorHint="@color/hint_color"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+                app:startIconDrawable="@drawable/ic_baseline_account_circle_24"
+                app:startIconTint="@color/white">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/login_input"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/login_hint"
-                    android:textColor="@color/gray_200"
                     android:background="@drawable/edit_text_background"
+                    android:hint="@string/login_hint"
+                    android:inputType="text"
                     android:padding="12dp"
                     android:singleLine="true"
-                    android:inputType="text"/>
+                    android:textColor="@color/gray_200" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
-                app:startIconDrawable="@drawable/ic_baseline_lock_open_24"
-                app:startIconTint="@color/white"
                 android:elevation="4dp"
                 android:textColorHint="@color/hint_color"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+                app:startIconDrawable="@drawable/ic_baseline_lock_open_24"
+                app:startIconTint="@color/white">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/password_input"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:singleLine="true"
-                    android:textColor="@color/gray_200"
                     android:background="@drawable/edit_text_background"
-                    android:padding="12dp"
                     android:hint="@string/password_hint"
-                    android:inputType="textPassword"/>
+                    android:inputType="textPassword"
+                    android:padding="12dp"
+                    android:singleLine="true"
+                    android:textColor="@color/gray_200" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -103,10 +103,10 @@
                 android:layout_marginTop="16dp"
                 android:background="@drawable/red_button_background"
                 android:text="@string/sign"
-                android:textColor="@color/gray_200"
-                android:typeface="sans"
-                android:textStyle="bold"
                 android:textAllCaps="false"
+                android:textColor="@color/gray_200"
+                android:textStyle="bold"
+                android:typeface="sans"
                 app:backgroundTint="@null" />
 
             <ProgressBar
@@ -120,27 +120,26 @@
                 android:id="@+id/create_account_linear_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:layout_marginTop="16dp"
-                android:gravity="center">
+                android:gravity="center"
+                android:orientation="horizontal">
 
                 <com.google.android.material.textview.MaterialTextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/dont_have_account"
                     android:textAlignment="center"
-                    android:textColor="@color/gray_200"/>
+                    android:textColor="@color/gray_200" />
 
                 <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/create_account_text_view"
-                    android:clickable="false"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:clickable="false"
                     android:text="@string/create_account"
                     android:textAlignment="center"
-                    android:layout_marginStart="5dp"
-                    android:textStyle="bold"
-                    android:textColor="@color/gray_200"/>
+                    android:textColor="@color/gray_200"
+                    android:textStyle="bold" />
 
             </LinearLayout>
 
